<resources>
    <string name="app_name">EVA02_grupal</string>
    <string name="btnregistro">REGISTRAR</string>
    <string name="btnFormulario">FORMULARIO</string>
    <string name="btnListado">LISTADO</string>
    <string name="twtituloregis">INFORMACION</string>
    <string name="tvnombre">NOMBRE</string>
    <string name="tvAppll">Apellidos</string>
    <string name="tvdni">DNI</string>
    <string name="tvCelular">CELULAR</string>
    <string name="tvEmail">EMAIL</string>
    <string name="tvselecc">Seleccione sus cualidades:</string>
    <string name="tvslecarrera">Seleccionar carrera a estudiar</string>
    <string name="btnAcces">ACCEDER</string>
    <string name="btningn">INGENERIA</string>
    <string name="btncienMet">CIENCIAS MEDICAS</string>
    <string name="btnadm">ADMINISTRACION</string>
    <string name="btnotro">OTROS</string>
    <string name="ckpunt">PUNTUAL</string>
    <string name="ckrepst">RESPETUOSO</string>
    <string name="ckresponsabl">RESPONSABLE</string>
    <string name="ckotross">OTROS</string>
    <string name="btnregresar1">REGRESAR</string>
    <string name="txtval01">1. Marque sus platos favoritos</string>
    <string name="txtval02">2.¿Visitaste algun país de Europa, Asia \no Africa?</string>
    <string name="txtval03">3.¿Hablas Inglés?</string>
    <string name="txtval04">4.¿Te gusta la tecnologia?</string>
    <string name="txtval05">5.¿Realizas trabajo remoto?</string>
    <string name="btnvalue">Resolver</string>
    <string name="tvtit">Listado de registros</string>
    <string name="btnvolv">VOLVER</string>
    <string name="cbvalArrozP">Arroz con pollo</string>
    <string name="cbvallomosaltado">Lomo Saltado</string>
    <string name="cbvalajidegallina">Aji de gallina</string>
    <string name="cbvaltallarines">Tallarines</string>
    <string name="cbvalarrozchaufa">Arroz Chaufa</string>
    <string name="cbvalotros" />
    <string name="cbvalOtros">Otros\n</string>
    <string name="cbvalOtro">Otros</string>
    <string name="rbvalsi1">SI</string>
    <string name="rbvalno1" />
    <string name="rbvalNo1">NO</string>
    <string name="rbvalsi2">SI</string>
    <string name="rbvalno2">NO</string>
    <string name="rbvalsi3">SI</string>
    <string name="rbvalno3">NO</string>
    <string name="rbvalsi4">SI</string>
    <string name="rbvalno4">NO</string>
    <string name="mensajeRegistroCorrecto">Cuestionario Registrado Correctamente</string>
    <string name="chbpuntual">PUNTUALIDAD</string>
    <string name="chbresponsabilidad">RESPONSABILIDAD</string>
    <string name="chbrespetuoso">RESPETUOSO</string>
    <string name="chbOTros">OTROS</string>
</resources>